[ZMS-055] horizontal scroll fix for methodologies

--- a/src/components/method/method.scss
+++ b/src/components/method/method.scss
@@ -4,6 +4,7 @@
   padding: 5% 0;
   color: #ffffff;
   background: #FFFFFF;
+  scroll-behavior: smooth;
 
   &--test {
     background-color: rgb(142, 179, 82);
