--- a/src/components/stepper/stepper.scss
+++ b/src/components/stepper/stepper.scss
@@ -41,6 +41,7 @@
         &__item {
           width: 182px;
           height: 182px;
+          display: block;
 
           &--link {
             width: 50px;
